working subscription examples

--- a/examples/app/chanel/index.html
+++ b/examples/app/chanel/index.html
@@ -4,5 +4,9 @@
     <body>
         <script src="/~landscape/js/channel.js"></script>
         <script src="/~chanel/index.js"></script>
+
+        <input type="text" id="msg" name="msg" placeholder="Type message here..." />
+        <br /><br/ >
+        <button onClick="sendSubData(document.getElementById('msg').value);">Send Data to Subscription</button>
     </body>
 </html>
