--- a/example-code/app/chanel/index.html
+++ b/example-code/app/chanel/index.html
@@ -2,7 +2,7 @@
     <head>
     </head>
     <body>
-        <script src="/~landscape/js/channel.js"></script>
+        <script src="/~chanel/channel.js"></script>
         <script src="/~chanel/index.js"></script>
 
         <input type="text" id="msg" name="msg" placeholder="Type message here..." />
